Change to css Changing code to fix white space that appears on bottom of screen when scrolling on mobile chrome browser when looking at book info.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body > div {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     display: flex;
